--- a/css/media.css
+++ b/css/media.css
@@ -22,6 +22,9 @@
     margin-inline: 50px;
     padding-left: 32px;
   }
+  section.forecast-table .container {
+    top: -32%;
+  }
 }
 @media screen and (min-width: 1200px) {
   .container {
