--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,13 @@
+@media screen and (min-width: 321px) {
+  section.forecast-table .container .inner1 .card .card-body .card-text {
+    font-size: 4.5rem;
+  }
+}
+@media screen and (min-width: 386px) {
+  section.forecast-table .container .inner1 .card .card-body .card-text {
+    font-size: 5.625rem;
+  }
+}
 @media screen and (min-width: 768px) {
   .container {
     width: 750px;
